--- a/wcsa4seleniumproject/test-output/old/Default suite/reporter-output.html
+++ b/wcsa4seleniumproject/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Empty Chrome Browser is Launched</td></tr>
-<tr><td>Browser Window is Maximized</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
